[package]
name = "minesweeper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
crossterm = "0.20.0"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
chrono = "0.4.19"